fix spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -36,8 +36,7 @@ body {
 	font-size: 4.1em;
 	font-family: "Arkipelago", sans-serif;
 	font-weight: 500;
-	/* margin-top: -39%; */
-	padding-top: 2px;
+	margin-top: -39%;
 	font-family: "Muster", sans-serif;
 	transform: rotate(-7grad);
 }
@@ -61,14 +60,14 @@ body {
 	display: inline-block;
 	/* margin-left: 15%; */
 	/* margin-top: 10px; */
-	margin-top: 8%;
+	margin-top: 10%;
 }
 
 .titleDescription {
 	margin-left: 66%;
 	margin-right: 5%;
 	/* margin-top: -87px; */
-	/* margin-top: 30%; */
+	margin-top: 30%;
 	z-index: 100;
 	padding-bottom: 10%;
 }
